Finished password reset endpoints
